# Efficient-Computing-of-Deep-Neural-Networks

./: README.md
L01_Model_Deploy/: CMakeLists.txt
L01_Model_Deploy/cmake/: FindOpenCV.cmake  FindTensorRT.cmake
L01_Model_Deploy/include/: Classification.h
L01_Model_Deploy/src/: CMakeLists.txt  Classification.cc  Utils.h
L01_Model_Deploy/tutorials/: CMakeLists.txt  Demo.cc
Lab01_OCR_Deploy/: exportOnnx.py  inferByOrt.py
Lab01_OCR_Deploy/centermask/config/: defaults.py
Lab01_OCR_Deploy/centermask/modeling/fcos/: fcos.py  fcos_out.py  fcos_outputs.py
Lab01_OCR_Deploy/config/: config.yaml
